--- a/ueditor/web/ueditor/themes/gray/css/ueditor.css
+++ b/ueditor/web/ueditor/themes/gray/css/ueditor.css
@@ -14,6 +14,71 @@
     line-height: 20px;
 }
 
+/*
+    自定义样式
+*/
+.edui-icon {
+    width:30px!important;
+    height: 30px!important;
+    line-height: 28px !important;
+}
+
+.edui-button-wrap {
+    width:30px!important;
+    height: 30px!important;
+    line-height: 36px !important;
+}
+
+.edui-gray {
+    padding: 0 !important;
+}
+
+.edui-gray .edui-toolbar .edui-combox .edui-combox-body {
+    width: 90px!important;
+    height: 25px!important;
+    text-indent: 5px;
+}
+
+.edui-dialog-caption {
+    padding-left: 1rem!important;
+}
+
+.edui-dialog-foot {
+    line-height: 40px;
+}
+.edui-button-body {
+    position: relative;
+    display: inline-block;
+}
+
+.edui-button-body > .edui-label  {
+    position: absolute!important;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.edui-gray .edui-toolbar .edui-combox .edui-combox-body  {
+    line-height: 25px!important;
+}
+
+.edui-box .edui-arrow {
+    position: absolute!important;
+    right: 2px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.edui-listitem-label {
+    padding: 3px 5px!important;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.edui-listitem-label:hover {
+    background:rgb(238, 238, 238);
+}
+
 
 /*基础UI构建
 */
